<resources>
    <string name="app_name">Smart Grocery</string>
    <string name="recipe_name">Recipe Name:</string>
    <string name="servings">Servings:</string>
    <string name="prep_time">Prep Time:</string>
    <string name="save">Save</string>
    <string name="ingredients">Ingredients:</string>
    <string name="directions">Directions:</string>
    <string name="create_recipe">New Recipe</string>
    <string name="edit_button">Edit</string>
    <string name="cook_time">Cook Time:</string>
    <string name="title_activity_menu_navigator">MenuNavigator</string>
    <string name="cancel">CanCel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="empty_list">Your grocery list is empty! Add some groceries from your recipe book to get started.</string>
</resources>
