<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:background="@color/brightGray">



    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:elevation="30dp">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="groceryproject.jacob.com.recipelist.EditRecipe"
            android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_name_text_view"
                android:text="@string/recipe_name"
                android:textSize="22dp"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Recipe Name..."
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:id="@+id/recipe_name_text_edit"
                android:layout_marginBottom="16dp"
                android:inputType="textCapSentences"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/servings"
                android:textSize="22dp"
                android:id="@+id/serving_text_view"
                style="?android:listSeparatorTextViewStyle"
                android:maxLines="1"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/serving_edit_text"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="Ex: 2 servings, 12 slices"
                android:layout_marginBottom="16dp"
                android:inputType="textCapSentences"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prep_time"
                android:textSize="22dp"
                android:id="@+id/prep_time_text_view"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:id="@+id/prep_time_edit_text"
                android:hint="In minutes"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:inputType="number"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cook_time"
                android:textSize="22dp"
                android:id="@+id/cook_time_text_view"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:id="@+id/cook_time_edit_text"
                android:hint="In minutes"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:inputType="number"
                android:maxLines="1"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textSize="22dp"
                android:id="@+id/ingredients_text_view"
                style="?android:listSeparatorTextViewStyle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:id="@+id/ingredients_edit_text"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                tools:text="*"
                android:inputType="textCapSentences|textMultiLine"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/directions"
                android:textSize="22dp"
                android:layout_marginTop="16dp"
                android:id="@+id/directions_text_view"
                style="?android:listSeparatorTextViewStyle"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:id="@+id/directions_edit_text"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:inputType="textCapSentences|textMultiLine"/>



        </LinearLayout>
    </ScrollView>
</RelativeLayout>